# mp-audio-stream

./: .gitmodules  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  main_nogui.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: audio_stream.podspec  mp_audio_stream.podspec
ios/Classes/: AudioStreamPlugin.h  AudioStreamPlugin.m  SwiftAudioStreamPlugin.swift
lib/: audio_stream.dart  mp_audio_stream.dart
lib/js/: audio_stream.js  test.html
lib/src/: audio_stream web.dart  audio_stream_mastream.dart  audio_stream_web.dart  mp_audio_stream_mastream.dart  mp_audio_stream_web.dart
linux/: CMakeLists.txt
macos/: audio_stream.podspec  mp_audio_stream.podspec
macos/Classes/: AudioStreamPlugin.swift  mp_audio_stream.cc
src/: CMakeLists.txt  audio_stream.cc  audio_stream.h  mp_audio_stream.cc  mp_audio_stream.h  test.cc
windows/: CMakeLists.txt
(+5 files in other folders)
